8155966: Assertion failures when -XX:+UseParallelGC -XX:ParallelGCThreads=1 Reviewed-by: drwhite, kbarrett